added tree view class category

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,34 @@
 <head>
   <meta charset="utf-8">
   <title>Hannsaa Home Tutor</title>
-  <base href="/">
+  <base href="/admin/hansa-app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">  
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" href="hansa-app/styles.6a4ccd339a919a3748f5.css"> -->
 </head>
 
 <body>
   <app-root></app-root>
+
+  <!-- <script type="text/javascript" src="hansa-app/runtime.70c21549f651bf02d178.js"></script>
+  <script type="text/javascript" src="hansa-app/polyfills.f567ebc264208916dba7.js"></script>
+  <script type="text/javascript" src="hansa-app/scripts.98e70eaa264573bd79a8.js"></script>
+  <script type="text/javascript" src="hansa-app/main.8c3561ab34ca33de5629.js"></script>
+
+  <script type="text/javascript" src="hansa-app/1.1cdbf86b89ca44c005a6.js"></script>
+  <script type="text/javascript" src="hansa-app/2.ab865b1640b347ce0c9f.js"></script>
+  <script type="text/javascript" src="hansa-app/3.0d1720314c034dcdb5c6.js"></script>
+  <script type="text/javascript" src="hansa-app/4.7fca1a32595b25f93554.js"></script>
+  <script type="text/javascript" src="hansa-app/5.92f0f06519582e7f577a.js"></script>
+  <script type="text/javascript" src="hansa-app/6.078724e47db78e41c818.js"></script>
+  <script type="text/javascript" src="hansa-app/7.830afae2d5fd1778f73d.js"></script>
+  <script type="text/javascript" src="hansa-app/8.b5811e0c4c20d06aca34.js"></script>
+  <script type="text/javascript" src="hansa-app/9.51da32c7a76580cd2e7a.js"></script>
+  <script type="text/javascript" src="hansa-app/10.7c7fc5793a43a7757f59.js"></script>
+  <script type="text/javascript" src="hansa-app/11.40e0def1f7ebdefbc865.js"></script>
+  <script type="text/javascript" src="hansa-app/12.a2bc5db7efa69f244b0e.js"></script>
+  <script type="text/javascript" src="hansa-app/13.2eb0f98dfdb21f49ee7e.js"></script> -->
+
 </body>
 
 </html>
