--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Hannsaa Home Tutor</title>
-  <base href="/admin/hansa-app">
+  <!-- <base href="/admin/hansa-app"> -->
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="hansa-app/styles.6a4ccd339a919a3748f5.css"> -->
