--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hannsaa Home Tutor</title>
-  <!-- <base href="/admin/"> -->
-  <base href="/">
+  <title>Hansa Tutor</title>
+  <base href="/admin/">
+  <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
