--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
   <title>Hansa Tutor</title>
   <!-- <base href="/admin/"> -->
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="hansa online tutor">
+  <meta name="keywords" content="Tutor,onlinetutor,hansatutor,hometutor">
+  <meta name="author" content="HansaTutor">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
     
 </head>
@@ -17,7 +20,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
   integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" 
   crossorigin="anonymous"></script>
-
   
   </body>
 
